# dicm

./: CMakeLists.txt  DESIGN.md  IMPL.md  README.md  TODO.md  TRIVIA.md  format.sh  testuid.cxx  testvr.cxx  uid.cxx  uid.hxx  vr.cxx  vr.hxx
examples/: CMakeLists.txt  copy.c  dcmdump.c  default.c  dicm2dicm.c  dicm2json.c  dicm2xml.c  dlog.c  event.c  example1.c  fd.c  file.c  json.c  log4c.c  mem-ansi.c  writer.h  xml.c
java/: Demo.java  Demo2.java  README  dump.java  e.xml  err.xml  stream.java
sandbox/: CMakeLists.txt  testuid.cxx  testvr.cxx  uid.cxx  vr.hxx
src/: CMakeLists.txt  dicm-de.c  dicm-de.h  dicm-errno.h  dicm-features.h  dicm-io.h  dicm-item.c  dicm-item.h  dicm-log.c  dicm-log.h  dicm-mem.h  dicm-parser-exp.c  dicm-parser.c  dicm-parser.h  dicm-private.h  dicm-public.h  dicm-reader.h  dicm-uid.c  dicm-uid.h  dicm-writer.c  dicm-writer.h  dicm.c  dicm.h  dicm2.c  parser.c  parser.h  parser2.c  reader.h  src.h  writer.h
tests/: CMakeLists.txt  check.c  testdicm_de.c  testdicm_vr.c
